<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F1F2F7">
    <ImageButton
        android:id="@+id/btnLogout"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:src="@drawable/ic_logout"
        android:contentDescription="@string/cerrar_sesion"
        android:padding="8dp"
        android:scaleType="fitCenter"
        app:tint="@color/clientes"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="16dp"/>



    <GridLayout
        android:id="@+id/gridMenu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:columnCount="6"
        android:rowCount="1"
        android:alignmentMode="alignMargins"
        android:useDefaultMargins="true"
        android:gravity="center"
        android:padding="16dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <!-- VENTAS -->
        <com.google.android.material.button.MaterialButton
            style="@style/PosMenuButton"
            android:text="@string/ventas"
            app:icon="@drawable/ic_sales"
            app:backgroundTint="@color/ventas" />

        <!-- HISTORIAL -->
        <com.google.android.material.button.MaterialButton
            style="@style/PosMenuButton"
            android:text="@string/historial"
            app:icon="@drawable/ic_history"
            app:backgroundTint="@color/historial" />

        <!-- REPORTES -->
        <com.google.android.material.button.MaterialButton
            style="@style/PosMenuButton"
            android:text="@string/reportes"
            app:icon="@drawable/ic_reports"
            app:backgroundTint="@color/reportes" />

        <!-- INVENTARIO -->
        <com.google.android.material.button.MaterialButton
            style="@style/PosMenuButton"
            android:text="@string/inventario"
            app:icon="@drawable/ic_inventory"
            app:backgroundTint="@color/inventario" />

        <!-- CLIENTES -->
        <com.google.android.material.button.MaterialButton
            style="@style/PosMenuButton"
            android:text="@string/clientes"
            app:icon="@drawable/ic_clients"
            app:backgroundTint="@color/clientes" />

        <!-- CONFIGURACIÓN -->
        <com.google.android.material.button.MaterialButton
            style="@style/PosMenuButton"
            android:text="@string/ajustes"
            app:icon="@drawable/ic_settings"
            app:backgroundTint="@color/ajustes" />

    </GridLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
