<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="24dp">

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/nombre_departamento"
        app:boxStrokeColor="@color/secondary">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etDialogDepartmentName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textCapWords"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/dialogSwitchIva"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/aplica_iva"
        android:showText="true"
        android:paddingTop="16dp"/>

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/dialogSwitchPermiteVenta"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/permite_venta"
        android:showText="true"
        android:paddingTop="8dp"/>

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/dialogSwitchActivo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/activo"
        android:showText="true"
        android:paddingTop="8dp"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnDialogSaveDepartment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/guardar"
        android:textAllCaps="false"
        app:cornerRadius="20dp"
        android:backgroundTint="@color/secondary"
        android:textColor="@android:color/white"/>

</LinearLayout>

