<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="24dp">

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/nombre_categoria"
        android:layout_marginBottom="8dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etDialogCategoryName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textCapWords"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/descripcion"
        android:layout_marginBottom="8dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etDialogCategoryDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textMultiLine"/>
    </com.google.android.material.textfield.TextInputLayout>

    <Spinner
        android:id="@+id/spinnerCategoryDepartment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:prompt="@string/selecciona_departamento"
        android:layout_marginBottom="8dp"/>

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/dialogSwitchCategoryActive"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/activo"
        android:showText="true"
        android:paddingTop="8dp"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnDialogSaveCategory"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/guardar"
        android:textAllCaps="false"
        app:cornerRadius="20dp"
        android:backgroundTint="@color/secondary"
        android:textColor="@android:color/white"/>

</LinearLayout>

